--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="icon" type="image/x-icon" href="/static/favicon.png">
     <meta charset="utf-8">
-    <meta name="description" content="Projekt inzynierski dotyczący aplikacji webowej" />
-    <meta name="author" content="JS,JP,BZ" />
+    <meta name="description" content="Projekt inzynierski dotyczący aplikacji webowej"/>
+    <meta name="author" content="JS,JP,BZ"/>
     <title>{% block title %} Present Planner {% endblock %}</title>
 </head>
 <body>
@@ -23,17 +23,17 @@
                 </div>
                 <ul class="nav nav-pills flex-column mt-4">
                     {% if not user.is_authenticated %}
-<!--                    <li class="nav-item py-2 py-sm-0">-->
-<!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
-<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
-<!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
-<!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
-<!--                            </svg>-->
-<!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
-<!--										Home-->
-<!--									</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item py-2 py-sm-0">-->
+                    <!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
+                    <!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
+                    <!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
+                    <!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
+                    <!--                            </svg>-->
+                    <!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
+                    <!--										Home-->
+                    <!--									</span>-->
+                    <!--                        </a>-->
+                    <!--                    </li>-->
                     <li class="nav-item py-2 py-sm-0">
                         <a href="/login/" class="nav-link text-white baseLinks">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
@@ -61,17 +61,17 @@
                         </a>
                     </li>
                     {% elif user.is_authenticated %}
-<!--                    <li class="nav-item py-2 py-sm-0">-->
-<!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
-<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
-<!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
-<!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
-<!--                            </svg>-->
-<!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
-<!--										Home-->
-<!--									</span>-->
-<!--                        </a>-->
-<!--                    </li>-->
+                    <!--                    <li class="nav-item py-2 py-sm-0">-->
+                    <!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
+                    <!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
+                    <!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
+                    <!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
+                    <!--                            </svg>-->
+                    <!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
+                    <!--										Home-->
+                    <!--									</span>-->
+                    <!--                        </a>-->
+                    <!--                    </li>-->
                     <li class="nav-item py-2 py-sm-0">
                         <a href="/profile/{{ user.username }}" class="nav-link text-white baseLinks">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
@@ -108,6 +108,17 @@
 									</span>
                         </a>
                     </li>
+                    <li class="nav-item py-2 py-sm-0">
+                        <a href="/friendsLists/" class="nav-link text-white baseLinks">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                 class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16">
+                                <path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
+                            </svg>
+                            <span class="fs-4 ms-3 d-none d-sm-inline">
+										Listy znajomych
+									</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="dropdown open p-3">
@@ -126,12 +137,12 @@
                 <div class="dropdown-menu" aria-labelledby="triggerId">
                     <a href="/createList/">
                         <button class="dropdown-item">
-                                Stwórz listę
+                            Stwórz listę
                         </button>
                     </a>
                     <a href="/logout/">
                         <button class="dropdown-item">
-                                Wyloguj
+                            Wyloguj
                         </button>
                     </a>
                 </div>
@@ -142,7 +153,8 @@
             <div name="content" class="main">
                 <div class="row justify-content-center">
                     {% if user.is_authenticated %}
-                    <p id="loginScreen">Witaj, <a class="uzytkownik" href="/profile/{{ user.username }}/">{{ user.username }}</a>, jesteś
+                    <p id="loginScreen">Witaj, <a class="uzytkownik" href="/profile/{{ user.username }}/">
+                        {{ user.username }}</a>, jesteś
                         zalogowany!
                         <a class="uzytkownik" href="/logout">Wyloguj się</a></p>
                     {% endif %}
