--- a/WishLists/templates/myGiftReservations.html
+++ b/WishLists/templates/myGiftReservations.html
@@ -13,7 +13,7 @@
     <h5>
         {{ opis }}
     </h5>
-    <h1 class="wyrownanieDoLewej">Zawartość:</h1>
+    <h1 class="wyrownanieDoLewej">Moje rezerwacje:</h1>
 
     <div id="zawartosc">
         {% if zawartosc_listy %}
@@ -26,16 +26,6 @@
                 </svg>
                 <span class="elementLista">
                     {{ prezent.nazwaPrezentu }}
-                    {% if request.user.id != ownerId %}
-                        {% if prezent.loginRezerwacji.id == null %}
-                            <a href="make-reservation/{{ prezent.id }}"><button class="btn btn-lg rounded-pill przyciskWelcome">Zarezerwuj {{ prezent.loginRezerwacji.id }} == null</button></a>
-                        {% elif prezent.loginRezerwacji.id == request.user.id %}
-                            <a href="cancel-reservation/{{ prezent.id }}"><button
-                                    class="btn btn-lg rounded-pill przyciskWelcome">Anuluj rezerwację {{ prezent.loginRezerwacji.id }} == {{ request.user.id }}</button></a>
-                        {% else %}
-                            <button class="btn btn-lg rounded-pill przyciskWelcome" disabled>Zarezerwowany {{ prezent.loginRezerwacji.id }} != {{ request.user.id }}</button>
-                        {% endif %}
-                    {% endif %}
                 </span>
             </li>
             {% endfor %}
@@ -52,15 +42,8 @@
         {% else %}
         <p class="elementLista">
         <div id="brakList">
-            <h1>Brak dostępnych prezentów.</h1>
-        {% if request.user.id == ownerId %}
-            <h1>Zedytuj listę, aby dodać prezenty!</h1>
-            <br>
-            <form method="POST" action="{% url 'addPresents' numerListy %}">
-                {% csrf_token %}
-                <button class="btn rounded-pill btn-lg przyciskWelcome ">Dodaj prezenty</button>
-            </form>
-        {% endif %}
+            <h1>Brak dostępnych rezerwacji.</h1>
+            <h1>Zacznij przeglądać listy znajomych, by zarezerwować prezenty!</h1>
         </div>
         </p>
         {% endif %}
