--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -119,6 +119,17 @@
 									</span>
                         </a>
                     </li>
+                    <li class="nav-item py-2 py-sm-0">
+                        <a href="/my-reservations/" class="nav-link text-white baseLinks">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                 class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16">
+                                <path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
+                            </svg>
+                            <span class="fs-4 ms-3 d-none d-sm-inline">
+										Moje rezerwacje
+									</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="dropdown open p-3">
