--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -1,19 +1,294 @@
-{% extends "main/base.html" %}
-{% block title %}Login{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="pl">
 
+<head>
+    <meta charset="UTF-8">
+    <title>Present Planner | Logowanie</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        h1 > a {
+            text-decoration:none;
+            color:#fff !important;
+        }
+
+        .intro-section {
+            padding: 75px 95px;
+            display: -webkit-box;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            flex-direction: column;
+            color: #ffffff;
+            position: relative;
+            overflow: hidden;
+            background: linear-gradient(0deg, #023E8A 0%, #48CAE4 100%);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: scroll;
+            background-size: cover;
+            padding: 50px;
+            min-height: 90vh;
+            z-index: 1;
+        }
+
+        @media (max-width: 991px)
+        {
+            .intro-section {
+                padding-left: 50px;
+                padding-rigth: 50px;
+            }
+        }
+
+        @media (max-width: 767px)
+        {
+            .intro-section {
+                padding: 28px;
+            }
+        }
+
+        @media (max-width: 575px)
+        {
+            .intro-section {
+                min-height: auto;
+            }
+        }
+
+        .brand-wrapper .logo {
+            height: 35px;
+        }
+
+        @media (max-width: 767px)
+        {
+            .brand-wrapper {
+                margin-bottom: 35px;
+            }
+        }
+
+        .intro-content-wrapper {
+            width: 410px;
+            max-width: 100%;
+            margin-top: 10%;
+            margin-bottom: auto;
+            margin-left: 10%;
+
+        }
+
+        .intro-content-wrapper .intro-title {
+            font-size: 40px;
+            font-weight: bold;
+            margin-bottom: 17px;
+        }
+
+        .intro-content-wrapper .intro-text {
+            font-size: 19px;
+            line-height: 1.37;
+        }
+
+        .intro-content-wrapper .btn-read-more {
+            background-color: #fff;
+            padding: 13px 30px;
+            border-radius: 0;
+            font-size: 16px;
+            font-weight: bold;
+            color: #000;
+            margin-top: 10%;
+        }
+
+        .intro-content-wrapper .btn-read-more:hover {
+              background-color: transparent;
+              border: 1px solid #fff;
+              color: #fff;
+        }
+
+        @media (max-width: 767px) {
+            .intro-section-footer {
+                margin-top: 35px;
+            }
+        }
+
+        .intro-section-footer .footer-nav a {
+            font-size: 20px;
+            font-weight: bold;
+            color: inherit;
+        }
+
+        @media (max-width: 767px) {
+            .intro-section-footer .footer-nav a {
+                font-size: 14px;
+            }
+        }
+
+        .intro-section-footer .footer-nav a + a {
+            margin-left: 30px;
+        }
+
+        .form-section {
+            display: -webkit-box;
+            display: flex;
+            -webkit-box-align: center;
+                  align-items: center;
+            -webkit-box-pack: center;
+                  justify-content: center;
+        }
+
+        @media (max-width: 767px) {
+            .form-section {
+                padding: 35px;
+            }
+        }
+
+        .login-wrapper {
+            width: 300px;
+            max-width: 100%;
+        }
+
+        @media (max-width: 575px) {
+            .login-wrapper {
+            width: 100%;
+            }
+        }
+
+        .login-wrapper .form-control {
+            border: 0;
+            border-bottom: 1px solid #B0B0B0;
+            border-radius: 0;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 15px 10px;
+            margin-bottom: 7px;
+        }
+        .login-wrapper .form-control::-webkit-input-placeholder {
+            color: #b0adad;
+        }
+        .login-wrapper .form-control::-moz-placeholder {
+            color: #b0adad;
+        }
+        .login-wrapper .form-control:-ms-input-placeholder {
+            color: #b0adad;
+        }
+        .login-wrapper .form-control::-ms-input-placeholder {
+            color: #b0adad;
+        }
+        .login-wrapper .form-control::placeholder {
+            color: #b0adad;
+        }
+
+        .login-title {
+            font-size: 30px;
+            font-weight: bold;
+            margin-bottom: 30px;
+            }
+
+        .login-btn {
+            padding: 13px 30px;
+            background-color: #000;
+            border-radius: 0;
+            font-size: 20px;
+            font-weight: bold;
+            color: #fff;
+        }
+
+        .login-btn:hover {
+            border: 1px solid #000;
+            background-color: transparent;
+            color: #000;
+        }
+
+        .login-wrapper-footer-text {
+            font-size: 14px;
+            text-align: center;
+        }
+        .bg-circle {
+            z-index: -1;
+            position: absolute;
+            border-radius: 100%;
+            background: linear-gradient(0deg, #023E8A 0%, #48CAE4 100%);
+        }
+        .bg-circle-1 {
+            height: 60rem;
+            width: 60rem;
+            bottom: -35rem;
+            left: -40rem;
+        }
+        .bg-circle-2 {
+            height: 30rem;
+            width: 30rem;
+            top: -5rem;
+            right: -10rem;
+        }
+        .bg-circle-3 {
+            height: 15rem;
+            width: 15rem;
+            bottom: -10rem;
+            right: 5%;
+        }
+        .bg-circle-4 {
+            height: 20rem;
+            width: 20rem;
+            top: -10rem;
+            right: 50%;
+        }
+        .tlo{
+            background-color: white;
+            box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+        }
+
+        .login-wrapper {
+            width: 250px;
+        }
+
+        .centerDiv{
+            margin-top: 4%;
+            text-align: center;
+        }
+        .container .px-5{
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+</head>
+<body>
 {% load crispy_forms_tags %}
-
-{% block content %}
-<div class="row justify-content-center formularzeP">
-    <div class="col-md-6">
-        <form method="POST" class="form-group">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <br>
-            <div class="d-flex justify-content-between">
-                <button type="submit" class="btn btn-lg rounded-pill przyciskRejestracja">Zaloguj się</button>
+<div class="container px-5">
+    <div class="container-fluid tlo">
+        <div class="row justify-content-center align-items-center centerDiv">
+            <div class="col-sm-6 col-md-6 intro-section">
+                <div class="brand-wrapper">
+                    <img class="logo2" src="{% static 'logo.png' %}" alt="Logo">
+                </div>
+                <div class="intro-content-wrapper">
+                    <h1 class="intro-title">Witamy w Present Planner</h1>
+                    <p class="intro-text">Wszystkie listy prezentowe w jednym miejscu!</p>
+                    <a href="/" class="btn btn-read-more rounded-pill">Strona główna</a>
+                </div>
+                <div class="bg-circle-1 bg-circle"></div>
+                <div class="bg-circle-2 bg-circle"></div>
+                <div class="bg-circle-3 bg-circle"></div>
+                <div class="bg-circle-4 bg-circle"></div>
             </div>
-        </form>
+            <div class="col-sm-6 col-md-6 form-section">
+                <div class="login-wrapper">
+                    <h2 class="login-title">Panel logowania</h2>
+                    <form method="POST" class="form-group">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <br>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary btn-block rounded-pill">Zaloguj</button>
+                        </div>
+                    </form>
+                    <br>
+                    <p class="login-wrapper-footer-text">Potrzebujesz konta? <a href="/register" class="text-reset">Zarejestruj
+                        się tutaj!</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-{% endblock %}
+
+
+</body>
+</html>
