--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -1,74 +1,58 @@
 {% extends "main/base.html" %}
 {% block title %} Profil - {{ user_username}} {% endblock %}
 {% block content %}
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="card p-4">
-        <div class=" image d-flex flex-column justify-content-center align-items-center">
-            <button class="btn btn-secondary"><img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100"/>
-            </button>
-            <span class="name mt-3">{{ user_first_name }} {{ user_last_name }}</span> <span class="idd">@{{ user_username }}</span>
+			<section class="vh-100" style="background-color: #f4f5f7;">
+			  <div class="container py-5 h-100">
+				<div class="row d-flex justify-content-center align-items-center h-100">
+				  <div class="col col-lg-6 mb-4 mb-lg-0">
+					<div class="card mb-3" style="border-radius: .5rem;">
+					  <div class="row g-0">
+						<div class="col-md-4 gradient-custom text-center text-white"
+						  style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+						  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+							alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
+						  <h5>Marie Horwitz</h5>
+						  <p>Web Designer</p>
+						  <i class="far fa-edit mb-5"></i>
+						</div>
+						<div class="col-md-8">
+						  <div class="card-body p-4">
+							<h6>Information</h6>
+							<hr class="mt-0 mb-4">
+							<div class="row pt-1">
+							  <div class="col-6 mb-3">
+								<h6>Email</h6>
+								<p class="text-muted">info@example.com</p>
+							  </div>
+							  <div class="col-6 mb-3">
+								<h6>Phone</h6>
+								<p class="text-muted">123 456 789</p>
+							  </div>
+							</div>
+							<h6>Projects</h6>
+							<hr class="mt-0 mb-4">
+							<div class="row pt-1">
+							  <div class="col-6 mb-3">
+								<h6>Recent</h6>
+								<p class="text-muted">Lorem ipsum</p>
+							  </div>
+							  <div class="col-6 mb-3">
+								<h6>Most Viewed</h6>
+								<p class="text-muted">Dolor sit amet</p>
+							  </div>
+							</div>
+							<div class="d-flex justify-content-start">
+							  <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
+							  <a href="#!"><i class="fab fa-twitter fa-lg me-3"></i></a>
+							  <a href="#!"><i class="fab fa-instagram fa-lg"></i></a>
+							</div>
+						  </div>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</section>
 
-            <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">0 <span
-                    class="follow">list życzeń</span></span></div>
-            {% if user.username == user_username %}
-            <div class=" d-flex mt-2">
-                <a href="edit/"><button class="btn1 btn-dark">Edytuj profil</button></a>
-            </div>
-            {% elif user.is_authenticated %}
-
-            {% if friend_status == "Wysłano" %}
-            <div class=" d-flex mt-2">
-                <a href="unfriend/">
-                    <button class="btn1 btn-dark">Anuluj zaproszenie</button>
-                </a>
-            </div>
-            {% elif friend_status == "Oczekujące" %}
-            <div class=" d-flex mt-2">
-                <a href="accept-invite/">
-                    <button class="btn1 btn-dark">Zaakceptuj zaproszenie</button>
-                </a>
-            </div>
-            <div class=" d-flex mt-2">
-                <a href="unfriend/">
-                    <button class="btn1 btn-dark">Usuń zaproszenie</button>
-                </a>
-            </div>
-            {% elif friend_status == "Przyjaciele" %}
-            <div class=" d-flex mt-2">
-                <a href="unfriend/">
-                    <button class="btn1 btn-dark">Usuń znajomego</button>
-                </a>
-            </div>
-            {% else %}
-            <div class=" d-flex mt-2">
-                <a href="invite/">
-                    <button class="btn1 btn-dark">Dodaj znajomego</button>
-                </a>
-            </div>
-            {% endif %}
-            {% endif %}
-            <div class=" px-2 rounded mt-4 date "><span class="join">Dołączył: {{ user_date_joined | date:"d.m.Y"}}</span></div>
-        </div>
-    </div>
-</div>
-
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="card p-4">
-        <div class=" image d-flex flex-column justify-content-center align-items-center">
-            Lista znajomych:
-            {% if friendsList %}
-            <ul>
-                {% for friend_username in friendsList %}
-                <li>
-                    <a href="/profile/{{ friend_username }}">{{ friend_username }}</a>
-                </li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-            {% if user.username == user_username %}
-            <p><a href="/search-for-user/">Wyszukaj użytkownika</a></p>
-            {% endif %}
-        </div>
-    </div>
-</div>
 {% endblock %}
