--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,47 +2,34 @@
 	 font-family: Verdana, sans-serif;
 }
 
-.nav-pills li a:hover{
-	background-color: #0077B6;
+.navbar-collapse img{
+	width: 3.5%;
+	height: 3.5%;
+	margin: 10px;
 }
 
-.logo{
-	padding-top: 10%;
-	padding-bottom: 5%;
-	text-align: center;
+.navbar-nav .nav-link {
+    color: white !important;
+    font-weight: bold;
+    margin-right: 20px;
 }
 
-.logo img{
-	width: 50%;
-	height: 50%;
+.navbar-nav .nav-link{
+    margin-top: 3px;
+    color: white;
+    border: 2px solid #023E8A;
+    border-radius: 5px;
 }
 
-.container-fluid {
-	overflow: hidden;
-}
-
-.baseLinks {
-    margin-bottom: 20px;
-	display: flex;
-    align-items: center;
-}
-
-.dropdown-toggle svg{
-	margin-bottom: 8px;
-}
-
-.dropdown-menu a{
-    text-decoration: none;
-    color: black;
-}
-
-.dropdown-menu button:hover{
-    background-color: #0077B6;
+.navbar-nav .nav-link:hover{
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: #03045E;
     color: white;
 }
 
-.dropdown-item:hover a{
-    color: white;
+.navbar-nav{
+    margin-left: 50px;
 }
 
 .main{
@@ -92,8 +79,8 @@
     margin-bottom: 10px;
 }
 
-#loginScreen{
-    text-align: right;
+nav{
+    background-color: #023E8A;
 }
 
 .createListForm{
@@ -357,6 +344,21 @@ header.masthead .bg-circle-4 {
     box-shadow: 0 0px 65px rgba(0,0,0,0.7);
 }
 
-.uzytkownik{
-    text-decoration: none;
+.dropdown-toggle svg{
+	margin-bottom: 8px;
 }
+
+.dropdown-menu a{
+    text-decoration: none;
+    color: black;
+}
+
+.dropdown-menu button:hover{
+    background-color: #023E8A;
+    color: white;
+}
+
+.dropdown-item:hover a{
+    color: white;
+}
+
