--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,169 +14,70 @@
 </head>
 <body>
 
-<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="bg-dark col-auto col-md-3 col-lg-2 min-vh-100 d-flex flex-column justify-content-between">
-            <div class="bg-dark p-2">
-                <div class="logo">
-                    <img src="{% static 'logo.png' %}" alt="Logo">
-                </div>
-                <ul class="nav nav-pills flex-column mt-4">
-                    {% if not user.is_authenticated %}
-                    <!--                    <li class="nav-item py-2 py-sm-0">-->
-                    <!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
-                    <!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
-                    <!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
-                    <!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
-                    <!--                            </svg>-->
-                    <!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
-                    <!--										Home-->
-                    <!--									</span>-->
-                    <!--                        </a>-->
-                    <!--                    </li>-->
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/login/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                      d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
-                                <path fill-rule="evenodd"
-                                      d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Zaloguj
-									</span>
-                        </a>
-                    </li>
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/register/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-r-square-fill" viewBox="0 0 16 16">
-                                <path d="M6.835 5.092v2.777h1.549c.995 0 1.573-.463 1.573-1.36 0-.913-.596-1.417-1.537-1.417z"/>
-                                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.5 4.002h3.11c1.71 0 2.741.973 2.741 2.46 0 1.138-.667 1.94-1.495 2.24L11.5 12H9.98L8.52 8.924H6.836V12H5.5z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Rejestracja
-									</span>
-                        </a>
-                    </li>
-                    {% elif user.is_authenticated %}
-                    <!--                    <li class="nav-item py-2 py-sm-0">-->
-                    <!--                        <a href="/home/" class="nav-link text-white baseLinks">-->
-                    <!--                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"-->
-                    <!--                                 class="bi bi-house-door-fill" viewBox="0 0 16 16">-->
-                    <!--                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5"/>-->
-                    <!--                            </svg>-->
-                    <!--                            <span class="fs-4 ms-3 d-none d-sm-inline">-->
-                    <!--										Home-->
-                    <!--									</span>-->
-                    <!--                        </a>-->
-                    <!--                    </li>-->
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/profile/{{ user.username }}" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-person-circle" viewBox="0 0 16 16">
-                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                                <path fill-rule="evenodd"
-                                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Mój profil
-									</span>
-                        </a>
-                    </li>
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/createList/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-bookmark-plus-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                      d="M2 15.5V2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.74.439L8 13.069l-5.26 2.87A.5.5 0 0 1 2 15.5m6.5-11a.5.5 0 0 0-1 0V6H6a.5.5 0 0 0 0 1h1.5v1.5a.5.5 0 0 0 1 0V7H10a.5.5 0 0 0 0-1H8.5z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Stwórz listę
-									</span>
-                        </a>
-                    </li>
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/myLists/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16">
-                                <path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Moje listy
-									</span>
-                        </a>
-                    </li>
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/friendsLists/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16">
-                                <path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Listy znajomych
-									</span>
-                        </a>
-                    </li>
-                    <li class="nav-item py-2 py-sm-0">
-                        <a href="/my-reservations/" class="nav-link text-white baseLinks">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                 class="bi bi-bookmark-heart-fill" viewBox="0 0 16 16">
-                                <path d="M2 15.5a.5.5 0 0 0 .74.439L8 13.069l5.26 2.87A.5.5 0 0 0 14 15.5V2a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2zM8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z"/>
-                            </svg>
-                            <span class="fs-4 ms-3 d-none d-sm-inline">
-										Moje rezerwacje
-									</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="dropdown open p-3">
-                <button class="btn border-none dropdown-toggle text-white" type="button" id="triggerId"
-                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                         class="bi bi-person-circle" viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                        <path fill-rule="evenodd"
-                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                    </svg>
-                    <span class="fs-5 ms-3 d-none d-sm-inline">
-									{{ user.username }}
-								</span>
-                </button>
-                <div class="dropdown-menu" aria-labelledby="triggerId">
-                    <a href="/createList/">
-                        <button class="dropdown-item">
-                            Stwórz listę
-                        </button>
+<nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-white" id="navbarTogglerDemo01">
+            <img src="{% static 'logo.png' %}" alt="Logo">
+            <span style="font-weight: 700; font-size: 25px; margin-left: 20px;">Present Planner</span>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white">
+                <li class="nav-item text-white">
+                    <a class="nav-link" href="/profile/{{ user.username }}">
+                        Mój profil
                     </a>
-                    <a href="/logout/">
-                        <button class="dropdown-item">
-                            Wyloguj
-                        </button>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/createList">
+                        Stwórz listę
                     </a>
-                </div>
-                {% endif %}
-            </div>
-        </div>
-        <div class="col-md-10">
-            <div name="content" class="main">
-                <div class="row justify-content-center">
-                    {% if user.is_authenticated %}
-                    <p id="loginScreen">Witaj, <a class="uzytkownik" href="/profile/{{ user.username }}/">
-                        {{ user.username }}</a>, jesteś
-                        zalogowany!
-                        <a class="uzytkownik" href="/logout">Wyloguj się</a></p>
-                    {% endif %}
-                    {% block content %}
-                    {% endblock %}
-                </div>
-            </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/myLists">
+                        Moje listy
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/friendsLists">
+                        Listy znajomych
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/my-reservations">
+                        Moje rezerwacje
+                    </a>
+                </li>
+            </ul>
+
         </div>
     </div>
+    <div class="dropdown open p-3">
+        <button class="btn border-none dropdown-toggle text-white" type="button" id="triggerId"
+                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                 class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                <path fill-rule="evenodd"
+                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+            </svg>
+            <span class="fs-5 ms-3 d-none d-sm-inline">
+									{{ user.username }}
+								</span>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="triggerId">
+            <a href="/logout/">
+                <button class="dropdown-item">
+                    Wyloguj
+                </button>
+            </a>
+        </div>
+    </div>
+</nav>
+{% block content %}
+{% endblock %}
 
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
