--- a/UserProfiles/templates/profile/edit.html
+++ b/UserProfiles/templates/profile/edit.html
@@ -18,11 +18,11 @@
                     <button class="btn1 btn-dark">Zmień hasło</button>
                 </a>
             </div>
-            {% elif edit == 'avatar-change'%}
+            {% elif edit %}
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit">Save changes</button>
+                <button type="submit">Zmień</button>
             </form>
             {% endif %}
             {% if edit != null %}
