--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -93,7 +93,7 @@
         <h1>Przejdź do Stwórz listę aby stworzyć swoją pierwszą listę!</h1>
         <br>
         <a href="/createList/">
-            <button type="button" class="btn btn-lg przyciskWelcome ">Stwórz listę</button>
+            <button type="button" class="btn btn-lg rounded-pill przyciskWelcome ">Stwórz listę</button>
         </a>
     </div>
     {% endif %}
