--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -25,32 +25,31 @@
             <span style="font-weight: 700; font-size: 25px; margin-left: 20px;">Present Planner</span>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white">
                 <li class="nav-item text-white">
-                    <a class="nav-link" href="/profile/{{ user.username }}">
+                    <a class="nav-link baseLinks" href="/profile/{{ user.username }}">
                         Mój profil
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/createList">
+                    <a class="nav-link baseLinks" aria-current="page" href="/createList">
                         Stwórz listę
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/myLists">
+                    <a class="nav-link baseLinks" aria-current="page" href="/myLists">
                         Moje listy
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/friendsLists">
+                    <a class="nav-link baseLinks" aria-current="page" href="/friendsLists">
                         Listy znajomych
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/my-reservations">
+                    <a class="nav-link baseLinks" aria-current="page" href="/my-reservations">
                         Moje rezerwacje
                     </a>
                 </li>
             </ul>
-
         </div>
     </div>
     <div class="dropdown open p-3">
