--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,20 +8,20 @@
 	margin: 10px;
 }
 
-.navbar-nav .nav-link {
+.navbar-nav .baseLinks{
     color: white !important;
     font-weight: bold;
     margin-right: 20px;
 }
 
-.navbar-nav .nav-link{
+.navbar-nav .baseLinks{
     margin-top: 3px;
     color: white;
     border: 2px solid #023E8A;
     border-radius: 5px;
 }
 
-.navbar-nav .nav-link:hover{
+.navbar-nav .baseLinks:hover{
     border: 2px solid white;
     border-radius: 5px;
     background-color: #03045E;
@@ -361,4 +361,5 @@ header.masthead .bg-circle-4 {
 .dropdown-item:hover a{
     color: white;
 }
+
 
