Wygląd zakładki edytuj profil

--- a/main/templates/main/welcome.html
+++ b/main/templates/main/welcome.html
@@ -28,7 +28,7 @@
             </ul>
         </div>
     </div>
-</nav>x
+</nav>
 
 <header class="masthead text-center text-white">
     <div class="masthead-content">
