--- a/UserProfiles/templates/profile/edit.html
+++ b/UserProfiles/templates/profile/edit.html
@@ -1,39 +1,50 @@
 {% extends "main/base.html" %}
 {% block title %} Profil - {{ user_username}} {% endblock %}
 {% block content %}
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-    <div class="card p-4">
-        <div class=" image d-flex flex-column justify-content-center align-items-center">
-            <button class="btn btn-secondary"><img src="uploads/av_stea.jpg" height="100" width="100"/>
-            </button>
-            {% if edit == null %}
-            <div class=" d-flex mt-2">
+<div class="container emp-profile">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="profile-img">
+                <img src="https://mdbcdn.b-cdn.net/img/new/avatars/8.webp" class="rounded-circle mb-3"
+                     alt="Avatar"/>
+                <!--                            <div class="file btn btn-lg btn-primary">-->
+                <!--                                Change Photo-->
+                <!--                                <input type="file" name="file"/>-->
+                <!--                            </div>-->
+            </div>
+        </div>
+        <div class="col-md-8 ">
+            <div class="profile-headEdit">
+                <h3 class="odstepNazwa">
+                    {{ user_username }}
+                </h3>
+                {% if edit == null %}
                 <a href="avatar-change/">
-                    <button class="btn1 btn-dark">Zmień awatar</button>
+                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Zmień awatar</button>
                 </a>
-            </div>
-            <span class="name mt-3">{{ user_first_name }} {{ user_last_name }}</span> <span class="idd">@{{ user_username }}</span>
-            <div class=" d-flex mt-2">
+                <br>
                 <a href="password-change/">
-                    <button class="btn1 btn-dark">Zmień hasło</button>
+                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Zmień hasło</button>
                 </a>
-            </div>
-            {% elif edit %}
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Zmień</button>
-            </form>
-            {% endif %}
-            {% if edit != null %}
-            <div class=" d-flex mt-2">
+                <br>
+                <a href="/profile/{{ request.user.username }}/">
+                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Wróc do Mój profil</button>
+                </a>
+
+                {% elif edit %}
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-sm rounded-pill profilButtonsEdit" type="submit">Zmień</button>
+                </form>
+                {% endif %}
+                {% if edit != null %}
                 <a href="/profile/{{ request.user.username }}/edit">
-                    <button class="btn1 btn-dark">Powrót</button>
+                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Powrót</button>
                 </a>
+                {% endif %}
+
             </div>
-            {% endif %}
-            <div class=" px-2 rounded mt-4 date "><span class="join">{{ user_date_joined }}</span></div>
         </div>
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
