Dodanie w Moje listy oraz Listy Znajomych, licznika ile prezentów ma dana lista

--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -41,6 +41,7 @@
                 </div>
                 <h2 class="tytulListy">{{ lista.tytul }}</h2>
                 <span>{{ lista.opis }}</span><br>
+                <span>Lista ma : {{lista.ilosc_pozycji}}  pozycji </span>
                 <div id="przyciskiMojeListy">
                     <div class="row">
                         <div class="col-sm-4">
