--- a/WishLists/templates/friendsLists.html
+++ b/WishLists/templates/friendsLists.html
@@ -41,6 +41,7 @@
                 </div>
                 <h2 class="tytulListy">{{ lista.tytul }}</h2>
                 <span>{{ lista.opis }}</span><br>
+                <span>Ilość pozycji: {{ lista.ilosc_pozycji }}</span>
                 <div id="przyciskiMojeListy">
                     <div class="row">
                         <div class="col-sm-4">
