Wygląd Moje listy

--- a/WishLists/templates/myLists.html
+++ b/WishLists/templates/myLists.html
@@ -32,71 +32,126 @@
 
 
     {% if listy %}
-    <div class="row">
-        {% for lista in listy %}
-        <div class="col-sm-6">
-            <div id="pojedynczaLista">
-                <div class="d-flex flex-column align-items-end ml-auto">
-                    <span class="dataUwtorzenia">{{lista.dataUtworzenia|date:"d.m.Y" }}</span>
-                </div>
-                <h2 class="tytulListy">{{ lista.tytul }}</h2>
-                <span>{{ lista.opis }}</span><br>
-                <span>Lista ma : {{lista.ilosc_pozycji}}  pozycji </span>
-                <div id="przyciskiMojeListy">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <form method="POST" action="{% url 'specificList' lista.id %}">
-                                {% csrf_token %}
-                                <button id="poNajechaniuYellow">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                         class="bi bi-card-text" viewBox="0 0 16 16">
-                                        <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
-                                        <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
-                                    </svg>
-                                </button>
-                            </form>
-                        </div>
-                        <div class="col-sm-4">
-                            <form method="POST" action="{% url 'addPresents' lista.id %}">
-                                {% csrf_token %}
-                                <button id="poNajechaniuGreen">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                         class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                        <path fill-rule="evenodd"
-                                              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                                    </svg>
-                                </button>
-                            </form>
-                        </div>
-                        <div class="col-sm-4">
-                            <form method="post" action="{% url 'deleteList' lista.id %}"
-                                  id="delete-form-{{ lista.id }}">
-                                {% csrf_token %}
-                                <button id="poNajechaniuRed" type="button" onclick="confirmDelete('{{ lista.id }}')">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                                         class="bi bi-trash" viewBox="0 0 16 16">
-                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                                    </svg>
-                                </button>
-                            </form>
+    <div class="event-schedule-area-two bg-color pad100">
+        <div class="container">
+            <!-- row end-->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade active show" id="home" role="tabpanel">
+                            <div class="table-responsive">
+                                {% if listy %}
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th class="text-center">Data utworzenia</th>
+                                        <th class="text-center">Tytuł listy</th>
+                                        <th class="text-center">Opis</th>
+                                        <th class="text-center">Ilość pozycji</th>
+                                        <th class="text-center">Zobacz listę</th>
+                                    </tr>
+                                    </thead>
+
+
+                                    <tbody>
+                                    {% for lista in listy %}
+                                    <tr class="inner-box">
+                                        <td>
+                                            <div class="event-date">
+                                                <span>{{lista.dataUtworzenia|date:"d.m.Y" }}</span>
+                                            </div>
+                                        </td>
+
+                                        <td>
+                                            <div class="categories">
+                                                <span>{{ lista.tytul }}</span>
+                                            </div>
+
+                                        </td>
+                                        <td>
+                                            <div class="time">
+                                                <span>{{ lista.opis }}</span>
+                                            </div>
+                                        </td>
+
+                                        <td>
+                                            <div class="time">
+                                                <span>Ilość pozycji: {{ lista.ilosc_pozycji }}</span>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="primary-btn">
+                                                <form method="POST" action="{% url 'specificList' lista.id %}">
+                                                    {% csrf_token %}
+                                                    <button id="poNajechaniuYellow">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                             fill="currentColor"
+                                                             class="bi bi-card-text" viewBox="0 0 16 16">
+                                                            <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
+                                                            <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
+                                                        </svg>
+                                                    </button>
+                                                </form>
+                                                <form method="POST" action="{% url 'addPresents' lista.id %}">
+                                                    {% csrf_token %}
+                                                    <button id="poNajechaniuGreen">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                             fill="currentColor"
+                                                             class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                                            <path fill-rule="evenodd"
+                                                                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                                        </svg>
+                                                    </button>
+                                                </form>
+
+                                                <form method="post" action="{% url 'deleteList' lista.id %}"
+                                                      id="delete-form-{{ lista.id }}">
+                                                    {% csrf_token %}
+                                                    <button id="poNajechaniuRed" type="button"
+                                                            onclick="confirmDelete('{{ lista.id }}')">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
+                                                             fill="currentColor"
+                                                             class="bi bi-trash" viewBox="0 0 16 16">
+                                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                                        </svg>
+                                                    </button>
+                                                </form>
+
+
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+
+                                    </tbody>
+                                </table>
+
+
+                                {% else %}
+                                <div id="brakList">
+                                    <h1>Brak dostępnych list.</h1>
+                                    <h1>Przejdź do Stwórz listę aby stworzyć swoją pierwszą listę!</h1>
+                                    <br>
+                                    <a href="/createList/">
+                                        <button type="button" class="btn btn-lg rounded-pill przyciskWelcome ">Stwórz
+                                            listę
+                                        </button>
+                                    </a>
+                                </div>
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- /col end-->
             </div>
+            <!-- /row end-->
         </div>
-        {% endfor %}
     </div>
-    {% else %}
-    <div id="brakList">
-        <h1>Brak dostępnych list.</h1>
-        <h1>Przejdź do Stwórz listę aby stworzyć swoją pierwszą listę!</h1>
-        <br>
-        <a href="/createList/">
-            <button type="button" class="btn btn-lg rounded-pill przyciskWelcome ">Stwórz listę</button>
-        </a>
-    </div>
+
+
     {% endif %}
 </div>
 
