--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -49,6 +49,11 @@
                         Moje rezerwacje
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link baseLinks" aria-current="page" href="/friends-list">
+                        Znajomi
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
