--- a/UserProfiles/templates/friends/friends_list.html
+++ b/UserProfiles/templates/friends/friends_list.html
@@ -103,13 +103,15 @@
                             </tbody>
                         </table>
                         {% else %}
-                        <div id="brakList">
-                            <h1>Brak dostępnych list.</h1>
-                            <h1>Przejdź do Stwórz listę aby stworzyć swoją pierwszą listę!</h1>
-                            <br>
-                            <a href="/createList/">
-                                <button type="button" class="btn btn-lg rounded-pill przyciskWelcome ">Stwórz
-                                    listę
+                        <div class="text-center noFriends">
+                            <h1>Nie masz znajomych!</h1>
+                            <h2>Wyszukaj ich i wyślij im zaproszenie.</h2>
+                            <a href="/search-for-user">
+                                <button class="btn btn-lg rounded-pill NoFriendsButtons">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                    </svg>
+                                    Wyszukaj znajomego
                                 </button>
                             </a>
                         </div>
